gitignore 및 env 생성 테스트

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@ target/
 *.iml
 *.ipr
 
+### 환경설정 ###
+.env.example
+*.application.properties
+*.application.yml
+*.application.yaml
+
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
