--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=viewfit
 spring.config.import=optional.file:.env[.properties]
 
 server.port=${PORT}
+
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+spring.datasource.username=${POSTGRES_ID}
+spring.datasource.password=${POSTGRES_PW}
