JPA 적용, Lombok 추가, Cloud DB 연동 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=viewfit
 
-spring.config.import=optional.file:.env[.properties]
+spring.config.import=file:.env[.properties]
 
-server.port=${PORT}
+server.port=9080
 
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
 spring.datasource.username=${POSTGRES_ID}
 spring.datasource.password=${POSTGRES_PW}
+
+spring.security.user.password=Goldsho1!
